--- a/css/apps.css
+++ b/css/apps.css
@@ -1,7 +1,7 @@
 .version.apps /* version checker */
 {
-	color: #0000E0;
-	background-color: #EF6F21;
+	color: #00001D;
+	background-color: #2C00B7;
 }
 
 .html
@@ -319,8 +319,8 @@
 	z-index: 62;
 	width: 596px;
 	min-height: 44px;
-	font-size: 27px;
 	line-height: 32px;
+	font-size: 27px;
 	margin-left: 198px;
 	margin-top: 90px;
 	position: relative;
