--- a/css/arduino.css
+++ b/css/arduino.css
@@ -1,7 +1,7 @@
 .version.arduino /* version checker */
 {
-	color: #000004;
-	background-color: #51E06A;
+	color: #0000F7;
+	background-color: #62825D;
 }
 
 .html
@@ -605,8 +605,8 @@
 	z-index: 168;
 	width: 217px;
 	min-height: 52px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-weight: bold;
 	position: relative;
 }
