--- a/css/communication.css
+++ b/css/communication.css
@@ -1,7 +1,7 @@
 .version.communication /* version checker */
 {
-	color: #000003;
-	background-color: #3AD67C;
+	color: #0000F4;
+	background-color: #15B919;
 }
 
 .html
@@ -607,8 +607,8 @@
 	z-index: 168;
 	width: 198px;
 	min-height: 24px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-weight: bold;
 	position: relative;
 }
