--- a/css/dsp.css
+++ b/css/dsp.css
@@ -1,7 +1,7 @@
 .version.dsp /* version checker */
 {
-	color: #0000EE;
-	background-color: #602E79;
+	color: #0000F9;
+	background-color: #294AAC;
 }
 
 .html
@@ -608,8 +608,8 @@
 	z-index: 168;
 	width: 82px;
 	min-height: 28px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-weight: bold;
 	position: relative;
 }
