--- a/css/ieee.css
+++ b/css/ieee.css
@@ -1,7 +1,7 @@
 .version.ieee /* version checker */
 {
-	color: #0000E3;
-	background-color: #FCAAE6;
+	color: #000001;
+	background-color: #B26111;
 }
 
 .html
@@ -607,8 +607,8 @@
 	z-index: 168;
 	width: 163px;
 	min-height: 41px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-weight: bold;
 	position: relative;
 }
