--- a/css/pickit.css
+++ b/css/pickit.css
@@ -1,7 +1,7 @@
 .version.pickit /* version checker */
 {
-	color: #00000B;
-	background-color: #F56220;
+	color: #000016;
+	background-color: #FAC7BD;
 }
 
 .html
@@ -568,8 +568,8 @@
 	z-index: 144;
 	width: 119px;
 	min-height: 38px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-weight: bold;
 	position: relative;
 }
