--- a/css/robotics.css
+++ b/css/robotics.css
@@ -1,7 +1,7 @@
 .version.robotics /* version checker */
 {
-	color: #00000F;
-	background-color: #9BE7D7;
+	color: #000009;
+	background-color: #A5C0FD;
 }
 
 .html
@@ -607,8 +607,8 @@
 	z-index: 168;
 	width: 160px;
 	min-height: 31px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-weight: bold;
 	position: relative;
 }
