--- a/css/videos.css
+++ b/css/videos.css
@@ -1,7 +1,7 @@
 .version.videos /* version checker */
 {
 	color: #0000E4;
-	background-color: #0496C0;
+	background-color: #8A42EF;
 }
 
 .html
@@ -312,8 +312,8 @@
 	z-index: 68;
 	width: 278px;
 	min-height: 32px;
-	line-height: 29px;
 	font-size: 24px;
+	line-height: 29px;
 	font-weight: bold;
 	position: relative;
 	margin-right: -10000px;
